--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,13 +19,13 @@
 
 #menu-toggle {
     display: none;
-  }
+}
 
-  .menu-icon {
+.menu-icon {
     cursor: pointer;
     display: none; 
     font-size: 30px;
-  }
+}
 
 .logo{
     height: 100%;
@@ -136,7 +136,7 @@
 }
 
 /* responsive */
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
 .menu-icon {
     display: block;
     }
