--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -29,6 +29,9 @@
     </header>
     <main>
         <h1>Participants</h1>
+        <div class="containerParticipants">
+            <iframe width="1000" height="750" src="https://lookerstudio.google.com/embed/reporting/3f652c98-1a52-40b6-a3ba-cbfe50005013/page/FI78D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+        </div>
     </main>
     <footer class="footer">
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
