--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -65,10 +65,29 @@
         </div>
         </div>
         <div class="booking">
-            <div class="card secondGroup"><h3>Early Bird</h3><a href="/inscription">Register</a></div>
-            <div class="card earlyBird"><h3>SecondCall</h3>
-                <a href="/inscription">Register</a></div>
-            <div class="card lastCall"><h3>Last call</h3><a href="/inscription">Register</a>
+            <div class="card secondGroup">
+                <h3>Early Bird</h3>
+                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
+                <p class="precio">€170</p>
+                <p class="cardDown">Adults/juniors & cubs</p>
+                <a class="button type1" href="/inscription">
+                    <span class="btn-txt">Register</span></a>
+            </div>
+            <div class="card earlyBird">
+                <h3>SecondCall</h3>
+                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
+                <p class="precio">€170</p>
+                <p class="cardDown">Adults/juniors & cubs</p>
+                <a class="button type1" href="/inscription">
+                    <span class="btn-txt">Register</span></a>
+            </div>
+            <div class="card lastCall">
+                <h3>Last call</h3>
+                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
+                <p class="precio">€170</p>
+                <p class="cardDown">Adults/juniors & cubs</p>
+                <a class="button type1" href="/inscription">
+                    <span class="btn-txt">Register</span></a>
         </div>
         <div class="readMore"></div>
 
