--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,6 @@
 .booking{
     height: 32rem;
     width: 100%;
-    background-color: #00a1ff;
     border: 1px solid black;
     display: flex;
     justify-content: center;
@@ -160,12 +159,77 @@
 .card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height:80%;
     width: 30%;
     border:1px solid black;
+    margin: 0px 1rem;
+    border-radius: 1rem;
 }
+.card h3{
+    width: 100%;
+    margin-top: 1rem;
+    font-size: 2rem;
+    background-color: yellow;
+    text-align: center;
+}
+.cardUp{
+    font-size: 1rem;
+    margin-top: 2rem;
+}
+.precio{
+    font-weight: 800;
+    font-size: 4rem;
+}
+
+.button {
+    height: 50px;
+    width: 200px;
+    position: relative;
+    text-align: center;
+    background-color: transparent;
+    cursor: pointer;
+    outline: 2px solid #252525;
+    overflow: hidden;
+    border-radius: 30px;
+    color: #333;
+    transition: all 0.5s ease-in-out;
+    text-decoration: none;
+    margin: auto;
+    line-height: 50px;
+}
+
+.btn-txt {
+    z-index: 1;
+    font-weight: 800;
+    letter-spacing: 4px;
+}
+.type1::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    background-color: #333;
+    border-radius: 30px;
+    visibility: hidden;
+    height: 10px;
+    width: 10px;
+    z-index: -1;
+}
+
+.button:hover {
+    box-shadow: 1px 1px 200px #252525;
+    color: #fff;
+    outline: none;
+    }
+
+.type1:hover::after {
+    visibility: visible;
+    transform: scale(100) ;
+    }
+
+
 /* Footer */
 .footer{
     background-color: grey;
