--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -29,16 +29,18 @@
     </header>
     <main>
         <div class="bannerHome">
+            <img src="resources/img/banner.webp" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
-            <h1 class="title">WIAC Word Indoor Archery Championship 2025</h1>
+            <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
             <p class="datepara">fecha</p>
             <p class="locationpara">Buenos Aires | Argentina</p>
         </div>
         <div class="containerMain">
             <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
-            <div class="message"><p>Mensaje de los organizadores
+            <div class="message">
+                <h4>Mensaje de los organizadores</h4>
                 <br>
-    
+                <p>
                 Estimados arqueros y aficionados al tiro con arco,<br>
                 Nos complace enormemente invitarles al Campeonato Mundial de Tiro con Arco WIAC 2025, organizado por la Asociación Argentina de Tiro con Arco.
                 El evento se llevará a cabo del (fecha) y se desarrollará siguiendo las normas y reglamentos de la IFAA. La competencia está abierta a miembros de todo el mundo (limitado a X arqueros) en buena posición de los países miembros.
@@ -46,22 +48,19 @@
                 El alojamiento será proporcionado por una variedad de hoteles y resorts en (LOCATION) Después de un día de competencia, los participantes podrán disfrutar de diversas actividades recreativas y de descanso para recargar energías para el día siguiente.
                 Finalmente, en nombre de la Asociación Argentina de Tiro con Arco, del Comité Organizador del evento y de todos los arqueros argentinos, les damos una cálida bienvenida a (LOCATION) para el Campeonato Mundial de Tiro con Arco WIAC 2025.
                 Atentamente,<br>
-                Gustavo Stancato <br>
+                <strong>Gustavo Stancato</strong> <br>
                 Presidente del Comité Organizador del Campeonato Mundial de Tiro con Arco WIAC 2025</p></div>
         </div>
         <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
         </div>
         <div class="schedule">
-            <h3 class="triTitle">Schedule</h3>
+            <h3>Schedule</h3>
             <div class="scheduleDays">
-                <div class="day"><p >Day 1</p><p>Open ceremony</p></div>
-                <div class="day"><p>Day 2</p></div>
-                <div class="day"><p>Day 3</p></div>
-                <div class="day"><p>Day 4</p></div>
-                <div class="day"><p>Day 5</p></div>
-                <div class="day"><p>Day 6</p></div>
-                <div class="day"><p>Day 7</p></div>
-                <div class="day"><p>Day 8</p></div>
+                <div class="day"><p>08.08.2025</p><p>Open ceremony</p></div>
+                <div class="day"><p>09.08.2025</p>First Round Indoor</div>
+                <div class="day"><p>10.08.2025</p>Second Round Indoor</div>
+                <div class="day"><p>11.08.2025</p>Third Round Indoor</div>
+                <div class="day"><p>12.08.2025</p>Awards ceremony - Dinner </div>
         </div>
         </div>
         <div class="booking">
