--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -28,9 +28,11 @@
         </nav>
     </header>
     <main>
-        <h1>Participants</h1>
+        <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <iframe width="1000" height="750" src="https://lookerstudio.google.com/embed/reporting/3f652c98-1a52-40b6-a3ba-cbfe50005013/page/FI78D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+            <iframe src="https://lookerstudio.google.com/embed/reporting/3f652c98-1a52-40b6-a3ba-cbfe50005013/page/FI78D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+        </div>
+        <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
         </div>
     </main>
     <footer class="footer">
