--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -105,7 +105,8 @@
             </div>
         </form>
     </div>
-    
+    <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <% if(typeof alert != 'undefined') { %>
         <script>
@@ -121,9 +122,14 @@
             
         </script>
         <%}%>
+        
 </body>
 
 <footer class="footer">
+    <div class="containerFooter">
+        <a href="/tyc" class="tycFooter">Terms of acceptances</a>
+        <a href="/tyc" class="privacyFotter">Privacy Policy</a>
     <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
+    </div>
 </footer>
 </html>
