--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -28,7 +28,19 @@
         </nav>
     </header>
     <main>
-        <h1>Schedule</h1>
+        <h1 class="title">Schedule</h1>
+        <div class="schContainer">
+            <div class="schedule">
+                <div class="scheduleDays">
+                    <div class="day"><p>08.08.2025</p><p>Open ceremony</p></div>
+                    <div class="day"><p>09.08.2025</p>First Round Indoor</div>
+                    <div class="day"><p>10.08.2025</p>Second Round Indoor</div>
+                    <div class="day"><p>11.08.2025</p>Third Round Indoor</div>
+                    <div class="day"><p>12.08.2025</p>Awards ceremony - Dinner </div>
+            </div>
+        </div>
+        <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+        </div>
     </main>
     <footer class="footer">
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
