--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -27,9 +27,14 @@
                     </ul>
         </nav>
     </header>
-    <main>
+    <main class="ubicacionMain">
         <h1>Location</h1>
+        <div class="ubacionContainer">
+            <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52536.0220384604!2d-59.03176385136723!3d-34.616768099999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc8f29cca883f1%3A0x1f4a67b15a05c43f!2sPOLIDEPORTIVO%20G.%20RODRIGUEZ!5e0!3m2!1sen!2sit!4v1724320518982!5m2!1sen!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
+    <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+    </div>
     <footer class="footer">
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
