--- a/views/home/tyc.ejs
+++ b/views/home/tyc.ejs
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>TyC|WIAC 2025</title>
+    <title>TyC | WIAC 2025</title>
 </head>
 <body>
     <header class="header">
@@ -28,8 +28,10 @@
         </nav>
     </header>
     <main>
-        <h1>TyC</h1>
+        <h1 class="title">TyC</h1>
     </main>
+    <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+    </div>
     <footer class="footer">
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
